hphp/test/slow/reified_generics/error-erased-generic-cls-1.php.expectf
Fatal error: Class C does not expect a reified generic at index 1 in %s on line 5
